force-app/main/default/objects/Booking__c/fields/Loan_Sanctioned__c.field-meta.xml
<CustomField>
    <fullName>Loan_Sanctioned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan Sanctioned</label>
    <type>Checkbox</type>
</CustomField>