force-app/main/default/objects/Booking__c/fields/Mobile_Primary2__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Primary2__c</fullName>
    <label>Mobile Primary</label>
    <type>Phone</type>
</CustomField>