force-app/main/default/objects/Booking__c/fields/North_By__c.field-meta.xml
<CustomField>
    <fullName>North_By__c</fullName>
    <formula>Plot__r.North_By__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>North By</label>
    <type>Text</type>
</CustomField>