force-app/main/default/objects/Booking__c/fields/Old_Unit__c.field-meta.xml
<CustomField>
    <fullName>Old_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Unit</label>
    <referenceTo>Plot__c</referenceTo>
    <relationshipLabel>Bookings (Old Unit)</relationshipLabel>
    <relationshipName>Bookings2</relationshipName>
    <type>Lookup</type>
</CustomField>