force-app/main/default/objects/Booking__c/fields/Other_charges__c.field-meta.xml
<CustomField>
    <fullName>Other_charges__c</fullName>
    <formula>Plot__r.Other_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>