force-app/main/default/objects/Booking__c/fields/Owner_Designation__c.field-meta.xml
<CustomField>
    <fullName>Owner_Designation__c</fullName>
    <formula>Owner:User.Designation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Designation</label>
    <type>Text</type>
</CustomField>