force-app/main/default/objects/Booking__c/fields/Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Owner_Type__c</fullName>
    <formula>TEXT(Owner:User.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Type</label>
    <type>Text</type>
</CustomField>