force-app/main/default/objects/Booking__c/fields/Paid_Percent__c.field-meta.xml
<CustomField>
    <fullName>Paid_Percent__c</fullName>
    <formula>Total_received_Amount__c / Total_Cost_Ex_Leg_Main__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>