force-app/main/default/objects/Booking__c/fields/Parking__c.field-meta.xml
<CustomField>
    <fullName>Parking__c</fullName>
    <label>Parking</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Scooter</fullName>
            </value>
            <value>
                <fullName>1 Covered Car</fullName>
            </value>
            <value>
                <fullName>1 Open Car</fullName>
            </value>
            <value>
                <fullName>0 Car Park</fullName>
            </value>
            <value>
                <fullName>0 Car</fullName>
                <isActive>false</isActive>
                <label>0 Car</label>
            </value>
            <value>
                <fullName>0 Scooter</fullName>
                <isActive>false</isActive>
                <label>0 Scooter</label>
            </value>
            <value>
                <fullName>1 Car</fullName>
                <isActive>false</isActive>
                <label>1 Car</label>
            </value>
            <value>
                <fullName>2 Car</fullName>
                <isActive>false</isActive>
                <label>2 Car</label>
            </value>
            <value>
                <fullName>2 Scooter</fullName>
                <isActive>false</isActive>
                <label>2 Scooter</label>
            </value>
            <value>
                <fullName>3 Car</fullName>
                <isActive>false</isActive>
                <label>3 Car</label>
            </value>
            <value>
                <fullName>3 Scooter</fullName>
                <isActive>false</isActive>
                <label>3 Scooter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>