force-app/main/default/objects/Booking__c/fields/Passport_Aadhar_1__c.field-meta.xml
<CustomField>
    <fullName>Passport_Aadhar_1__c</fullName>
    <label>Passport/Aadhar</label>
    <length>20</length>
    <type>Text</type>
</CustomField>