force-app/main/default/objects/Booking__c/fields/Piped_gas_garbage__c.field-meta.xml
<CustomField>
    <fullName>Piped_gas_garbage__c</fullName>
    <formula>Plot__r.Piped_Gas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Piped gas+garbage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>