force-app/main/default/objects/Booking__c/fields/PLC_ChargesSwap__c.field-meta.xml
<CustomField>
    <fullName>PLC_ChargesSwap__c</fullName>
    <label>PLC Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>