force-app/main/default/objects/Booking__c/fields/PLC_Swap__c.field-meta.xml
<CustomField>
    <fullName>PLC_Swap__c</fullName>
    <formula>Swap_Unit__r.PLC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PLC Swap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>