force-app/main/default/objects/Booking__c/fields/Presale_User__c.field-meta.xml
<CustomField>
    <fullName>Presale_User__c</fullName>
    <formula>SLead__r.Pre_sales_user__r.FirstName+&apos; &apos;+SLead__r.Pre_sales_user__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Presale User</label>
    <type>Text</type>
</CustomField>