force-app/main/default/objects/Booking__c/fields/Price_per_sqft__c.field-meta.xml
<CustomField>
    <fullName>Price_per_sqft__c</fullName>
    <label>Price per sqft</label>
    <length>100</length>
    <type>Text</type>
</CustomField>