force-app/main/default/objects/Booking__c/fields/Profession1__c.field-meta.xml
<CustomField>
    <fullName>Profession1__c</fullName>
    <label>Profession</label>
    <length>255</length>
    <type>Text</type>
</CustomField>