force-app/main/default/objects/Booking__c/fields/Project_Bank_Branch__c.field-meta.xml
<CustomField>
    <fullName>Project_Bank_Branch__c</fullName>
    <formula>Plot__r.Project__r.Branch__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Bank Branch</label>
    <type>Text</type>
</CustomField>