force-app/main/default/objects/Booking__c/fields/Project_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Bank_Name__c</fullName>
    <formula>Plot__r.Project__r.Bank_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Bank Name</label>
    <type>Text</type>
</CustomField>