force-app/main/default/objects/Booking__c/fields/Project_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Completion_Date__c</fullName>
    <formula>Plot__r.Project__r.Project_Completion_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Completion Date</label>
    <type>Date</type>
</CustomField>