force-app/main/default/objects/Booking__c/fields/Project_Financier__c.field-meta.xml
<CustomField>
    <fullName>Project_Financier__c</fullName>
    <formula>Plot__r.Project__r.Financier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Financier</label>
    <type>Text</type>
</CustomField>