force-app/main/default/objects/Booking__c/fields/Project_mortgager__c.field-meta.xml
<CustomField>
    <fullName>Project_mortgager__c</fullName>
    <formula>Plot__r.Project__r.Project_mortgager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project mortgager</label>
    <type>Text</type>
</CustomField>