force-app/main/default/objects/Booking__c/fields/Project_Recitals__c.field-meta.xml
<CustomField>
    <fullName>Project_Recitals__c</fullName>
    <label>Project Recitals</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>