force-app/main/default/objects/Booking__c/fields/Project_Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Project_Salesperson__c</fullName>
    <label>Project Salesperson</label>
    <type>TextArea</type>
</CustomField>