force-app/main/default/objects/Booking__c/fields/Project_STRR_No__c.field-meta.xml
<CustomField>
    <fullName>Project_STRR_No__c</fullName>
    <formula>Plot__r.Project__r.STRR_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project STRR No.</label>
    <type>Text</type>
</CustomField>