force-app/main/default/objects/Booking__c/fields/Project_Swift_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Swift_Code__c</fullName>
    <formula>Plot__r.Project__r.Swift_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Swift Code</label>
    <type>Text</type>
</CustomField>