force-app/main/default/objects/Booking__c/fields/Projectswap__c.field-meta.xml
<CustomField>
    <fullName>Projectswap__c</fullName>
    <label>Project Swap</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_Name</valueSetName>
    </valueSet>
</CustomField>