force-app/main/default/objects/Booking__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Apartment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>