force-app/main/default/objects/Booking__c/fields/Property_TypeFor__c.field-meta.xml
<CustomField>
    <fullName>Property_TypeFor__c</fullName>
    <formula>TEXT(Plot__r.Property_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Type</label>
    <type>Text</type>
</CustomField>