force-app/main/default/objects/Booking__c/fields/Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>Received_Amount__c</fullName>
    <formula>Total_received_Amount__c -  Refunded_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>