force-app/main/default/objects/Booking__c/fields/Received_Amount_Per__c.field-meta.xml
<CustomField>
    <fullName>Received_Amount_Per__c</fullName>
    <formula>( Received_Amount__c / Demanded_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received Amount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>