force-app/main/default/objects/Booking__c/fields/Registered_Document_No__c.field-meta.xml
<CustomField>
    <fullName>Registered_Document_No__c</fullName>
    <label>Registered Document No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>