force-app/main/default/objects/Booking__c/fields/Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Status__c</fullName>
    <formula>IF(
NOT(ISBLANK(Registration_Date__c)),
&quot;Registration Done&quot;,
IF(
(Now() - CreatedDate) &lt; 30,
&quot;Registration Pending &lt;30&quot;,
IF(
(Now() - CreatedDate) &lt; 60,
&quot;Registration Pending &lt;60&quot;,
&quot;Registration Pending &gt;60&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Status</label>
    <type>Text</type>
</CustomField>