force-app/main/default/objects/Booking__c/fields/RERA_NO__c.field-meta.xml
<CustomField>
    <fullName>RERA_NO__c</fullName>
    <formula>Plot__r.Project__r.RERA_NO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RERA.NO</label>
    <type>Text</type>
</CustomField>