force-app/main/default/objects/Booking__c/fields/ROI__c.field-meta.xml
<CustomField>
    <fullName>ROI__c</fullName>
    <label>ROI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>