force-app/main/default/objects/Booking__c/fields/Sale_Agreement_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Sale_Agreement_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sale Agreement Uploaded</label>
    <type>Checkbox</type>
</CustomField>