force-app/main/default/objects/Booking__c/fields/Scheme_Amount__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Scheme Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>