force-app/main/default/objects/Booking__c/fields/Secondary_Welcome_Mail__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Welcome_Mail__c</fullName>
    <label>Secondary Welcome Mail</label>
    <type>DateTime</type>
</CustomField>