force-app/main/default/objects/Booking__c/fields/Secondary_Welcome_Mail_Check__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Welcome_Mail_Check__c</fullName>
    <formula>ISBLANK(Secondary_Welcome_Mail__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Welcome Mail Check</label>
    <type>Checkbox</type>
</CustomField>