force-app/main/default/objects/Booking__c/fields/South_By__c.field-meta.xml
<CustomField>
    <fullName>South_By__c</fullName>
    <formula>Plot__r.South_By__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>South By</label>
    <type>Text</type>
</CustomField>