force-app/main/default/objects/Booking__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Booking Approved</fullName>
                <label>Booked</label>
            </value>
            <value>
                <fullName>Agreement Under Process</fullName>
            </value>
            <value>
                <fullName>First Disbursement Under Process</fullName>
            </value>
            <value>
                <fullName>Progressive Collections</fullName>
                <label>Progressive Milestones</label>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Handover</fullName>
            </value>
            <value>
                <fullName>Handed Over</fullName>
            </value>
            <value>
                <fullName>Swapping In Progress</fullName>
            </value>
            <value>
                <fullName>Swapping Completed</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Assignment Progress</fullName>
            </value>
            <value>
                <fullName>Assignment Completed</fullName>
            </value>
            <value>
                <fullName>Agreement</fullName>
                <isActive>false</isActive>
                <label>Agreement</label>
            </value>
            <value>
                <fullName>Booking</fullName>
                <isActive>false</isActive>
                <label>Booking</label>
            </value>
            <value>
                <fullName>D&amp;P</fullName>
                <isActive>false</isActive>
                <label>D&amp;P</label>
            </value>
            <value>
                <fullName>Legal Finalization</fullName>
                <isActive>false</isActive>
                <label>Legal Finalization</label>
            </value>
            <value>
                <fullName>Loan Approval</fullName>
                <isActive>false</isActive>
                <label>Loan Approval</label>
            </value>
            <value>
                <fullName>Maintanance</fullName>
                <isActive>false</isActive>
                <label>Maintanance</label>
            </value>
            <value>
                <fullName>Possession</fullName>
                <isActive>false</isActive>
                <label>Possession</label>
            </value>
            <value>
                <fullName>Swapping</fullName>
                <isActive>false</isActive>
                <label>Swapping</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>