force-app/main/default/objects/Booking__c/fields/Sub_Registrar__c.field-meta.xml
<CustomField>
    <fullName>Sub_Registrar__c</fullName>
    <label>Sub Registrar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>