force-app/main/default/objects/Booking__c/fields/Sub_Stages__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stages__c</fullName>
    <label>Sub Stages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted For Approval</fullName>
            </value>
            <value>
                <fullName>Approved by Sales Manager</fullName>
            </value>
            <value>
                <fullName>Approved by Finance Team</fullName>
            </value>
            <value>
                <fullName>Approved by CRM Manager</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>