force-app/main/default/objects/Booking__c/fields/Sub_total__c.field-meta.xml
<CustomField>
    <fullName>Sub_total__c</fullName>
    <formula>Total_Cost_of_the_Flat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>