force-app/main/default/objects/Booking__c/fields/Super_Built_up_area__c.field-meta.xml
<CustomField>
    <fullName>Super_Built_up_area__c</fullName>
    <formula>Plot__r.Super_built_up_area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Super Built up area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>