force-app/main/default/objects/Booking__c/fields/Swap_Block_Id__c.field-meta.xml
<CustomField>
    <fullName>Swap_Block_Id__c</fullName>
    <formula>Swap_Unit__r.Block1__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Swap Block Id</label>
    <type>Text</type>
</CustomField>