force-app/main/default/objects/Booking__c/fields/Swap_Unit__c.field-meta.xml
<CustomField>
    <fullName>Swap_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Swap Unit</label>
    <referenceTo>Plot__c</referenceTo>
    <relationshipLabel>Bookings (Swap Unit)</relationshipLabel>
    <relationshipName>Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>