force-app/main/default/objects/Booking__c/fields/Total_Consideration_with_taxes_and_other__c.field-meta.xml
<CustomField>
    <fullName>Total_Consideration_with_taxes_and_other__c</fullName>
    <formula>IF(ISNULL(Quote__c),Total_With_Taxswap__c,Quote__r.Total_Consideration_with_taxes_and_other__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Consideration with taxes and other</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>