force-app/main/default/objects/Booking__c/fields/Total_Cost_Ex_Leg_Main__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Ex_Leg_Main__c</fullName>
    <label>Total Cost (Ex. Leg.,Reg &amp; Main.)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>