force-app/main/default/objects/Booking__c/fields/Total_Cost_Ex_Leg_MainSwap__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Ex_Leg_MainSwap__c</fullName>
    <label>Total Cost (Ex. Leg. &amp; Main.) Swap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>