force-app/main/default/objects/Booking__c/fields/Total_Cost_Excluding_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Excluding_Tax__c</fullName>
    <formula>Total_Cost_Ex_Leg_Main__c -  GST_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost Excluding Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>