force-app/main/default/objects/Booking__c/fields/Total_Cost_of_the_Flat__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_of_the_Flat__c</fullName>
    <formula>Quote__r.Total_Cost_of_the_Flat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost of the Flat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>