force-app/main/default/objects/Booking__c/fields/Total_Cost_With_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_With_Tax__c</fullName>
    <formula>Quote__r.Grand_Total_Amount_With_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost With Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>