force-app/main/default/objects/Booking__c/fields/Total_Refunded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Refunded_Amount__c</fullName>
    <label>Total Refunded Amount</label>
    <summarizedField>Refund__c.Refund_Amount__c</summarizedField>
    <summaryForeignKey>Refund__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>